# GraphicEngineGL

./: CMakeLists.txt  LICENSE  README.md  build.sh
inc/: OpenGLInterface.hpp  SDLInterface.hpp
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
shaders/: file1.txt
src/: OpenGLInterface.cpp  SDLInterface.cpp  main.cpp
